# text_embedder

./: LICENSE  README.md  pyproject.toml
src/text_embedder/: __init__.py  embedder.py  utils.py
src/transformer_embedder/: __init__.py  embedder.py  utils.py
src/transformers_embedder/: __init__.py  embedder.py  utils.py
