[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers-embedder"
version = "0.1.0"
description = "A unified inference library for transformer-based pre-trained embedding models "
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Faheem", email = "xdevfaheem@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence :: Transformers :: Embeddings :: RAG",
]

[project.urls]
"Source" = "https://github.com/xdevfaheem/transformers_embedder"
"Tracker" = "https://github.com/xdevfaheem/transformers_embedder/issues"

[dependencies]
numpy = "^1.26"
torch = "^2.0"
tqdm = "^4.62"
transformers = "^4.42"

[optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["transformer_embedder"]

[tool.setuptools.package-data]
"transformer_embedder" = ["*.py"]

