[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-embedder"
dynamic = ["version"]
description = "A unified inference library for transformer-based pre-trained multilingual embedding models "
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
authors = [
    { name = "Faheem", email = "xdevfaheem@gmail.com" }
]
license = {file = "LICENSE"}
keywords = ["transformers", "embeddings", "NLP", "rag", "pytorch", "huggingface", "similarity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Repository = "https://github.com/xdevfaheem/text_embedder"
Issues = "https://github.com/xdevfaheem/text_embedder/issues"

[dependencies]
numpy = "^1.26"
torch = "^2.0"
tqdm = "^4.62"
transformers = "^4.42"

[optional-dependencies]
dev = [
    "pytest",
]


[tool.setuptools.dynamic]
version = {attr = "text_embedder.__version__"}

